proper ChangeLog entry
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12529 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/tips/ChangeLog
+++ b/tips/ChangeLog
@@ -1,6 +1,8 @@
 2004-03-05  Sven Neumann  <sven@gimp.org>
 
-	* Makefile.am: fixed the dependency.
+	* Makefile.am: fixed the newly added dependency.
+
+	* *.po: updated based on an uptodate gimp-tips.xml.in.
 
 2004-03-04  Sven Neumann  <sven@gimp.org>
 
