2004-03-05  Sven Neumann  <sven@gimp.org>
	* app/tools/gimpcurvestool.c
	* app/tools/gimplevelstool.c
	* app/tools/gimpthresholdtool.c: added buttons to toggle the
	histogram scale from the tool dialogs. Fixes bug #136227.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12530 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-03-05  Sven Neumann  <sven@gimp.org>
+
+	* app/tools/gimpcurvestool.c
+	* app/tools/gimplevelstool.c
+	* app/tools/gimpthresholdtool.c: added buttons to toggle the
+	histogram scale from the tool dialogs. Fixes bug #136227.
+
 2004-03-04  Michael Natterer  <mitch@gimp.org>
 
 	* app/tools/gimpmovetool.c (gimp_move_tool_button_press): if we
