--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-05  Sven Neumann  <sven@gimp.org>
+
+	* de.po: minor updates.
+
 2004-03-04  Miloslav Trmac  <mitr@volny.cz>
 
 	* cs.po: Updated Czech translation.
