2004-03-05  Michael Natterer  <mitch@gimp.org>
	* app/tools/gimpcurvestool.c: #include "widgets/gimppropwidgets.h"


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12532 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-05  Michael Natterer  <mitch@gimp.org>
+
+	* app/tools/gimpcurvestool.c: #include "widgets/gimppropwidgets.h"
+
 2004-03-05  Sven Neumann  <sven@gimp.org>
 
 	* app/tools/gimpcurvestool.c
