2004-03-05  Sven Neumann  <sven@gimp.org>
	* libgimpwidgets/gimpwidgets.c (gimp_random_seed_new): resurrected
	a mnemonic that was lost lately (1.88 -> 1.89) but still exists in
	most translations.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12533 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-03-05  Sven Neumann  <sven@gimp.org>
+
+	* libgimpwidgets/gimpwidgets.c (gimp_random_seed_new): resurrected
+	a mnemonic that was lost lately (1.88 -> 1.89) but still exists in
+	most translations.
+
 2004-03-05  Michael Natterer  <mitch@gimp.org>
 
 	* app/tools/gimpcurvestool.c: #include "widgets/gimppropwidgets.h"
