--- a/po-libgimp/de.po
+++ b/po-libgimp/de.po
@@ -1,5 +1,5 @@
 # This is the German catalog for the libgimp.
-# Copyright (C) 1999 - 2003 Free Software Foundation, Inc.
+# Copyright (C) 1999 - 2004 Free Software Foundation, Inc.
 #
 # Daniel Egger <Daniel.Egger@suse.de>
 # Sven Neumann <sven@gimp.org>
@@ -8,10 +8,10 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: GIMP 1.3.24\n"
+"Project-Id-Version: GIMP 1.3.27\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-03-04 00:14+0100\n"
-"PO-Revision-Date: 2003-12-08 10:10+0100\n"
+"POT-Creation-Date: 2004-03-05 14:12+0100\n"
+"PO-Revision-Date: 2004-03-05 14:22+0100\n"
 "Last-Translator: Sven Neumann <sven@gimp.org>\n"
 "Language-Team: German <gnome-de@gnome.org>\n"
 "MIME-Version: 1.0\n"
@@ -65,7 +65,7 @@ msgstr "%s kennt keine Ebenenmasken"
 
 #: libgimp/gimpexport.c:270
 msgid "Apply Layer Masks"
-msgstr ""
+msgstr "Ebenenmasken anwenden"
 
 #: libgimp/gimpexport.c:278
 #, c-format
@@ -295,7 +295,7 @@ msgstr "Nicht geladen"
 #: libgimpthumb/gimpthumb-utils.c:196
 #, c-format
 msgid "Failed to create thumbnail folder '%s'."
-msgstr ""
+msgstr "Fehler beim Anlegen des Verzeichnis für Vorschaubilder '%s'."
 
 #: libgimpwidgets/gimpcolorbutton.c:93
 msgid "/_Foreground Color"
@@ -384,11 +384,11 @@ msgstr "He_xadezimal:"
 
 #: libgimpwidgets/gimpcolorselection.c:203
 msgid "Current:"
-msgstr ""
+msgstr "Aktuell:"
 
 #: libgimpwidgets/gimpcolorselection.c:225
 msgid "Old:"
-msgstr ""
+msgstr "Vorher:"
 
 #: libgimpwidgets/gimpfileentry.c:350
 msgid "Select Folder"
@@ -508,16 +508,15 @@ msgstr ""
 
 #: libgimpwidgets/gimpwidgets.c:1275
 msgid "_New Seed"
-msgstr ""
+msgstr "_Neu Würfeln"
 
 #: libgimpwidgets/gimpwidgets.c:1288
 msgid "Seed random number generator with a generated random number"
 msgstr "Initialisiere den Zufallsgenerator mit einer Zufallszahl"
 
 #: libgimpwidgets/gimpwidgets.c:1292
-#, fuzzy
-msgid "Randomize"
-msgstr "_Würfeln"
+msgid "_Randomize"
+msgstr "_Zufällig"
 
 #: modules/cdisplay_colorblind.c:124
 msgid "Color deficit simulation filter (Brettel-Vienot-Mollon algorithm)"
@@ -570,39 +569,39 @@ msgstr "Kontrast_verstärkung:"
 
 #: modules/cdisplay_proof.c:102
 msgid "Color proof filter using ICC color profile"
-msgstr ""
+msgstr "Farb Andruck Filter mittels ICC Farbprofilen"
 
 #: modules/cdisplay_proof.c:166
 msgid "Color Proof"
-msgstr ""
+msgstr "Farb Andruck"
 
 #: modules/cdisplay_proof.c:319
 msgid "Perceptual"
-msgstr ""
+msgstr "Wahrnehmung"
 
 #: modules/cdisplay_proof.c:321
 msgid "Relative Colorimetric"
-msgstr ""
+msgstr "Kolorimetrisch (relativ)"
 
 #: modules/cdisplay_proof.c:325
 msgid "Absolute Colorimetric"
-msgstr ""
+msgstr "Kolorimetrisch (absolut)"
 
 #: modules/cdisplay_proof.c:331
 msgid "_Intent:"
-msgstr ""
+msgstr "_Absicht:"
 
 #: modules/cdisplay_proof.c:334
 msgid "Choose an ICC Color Profile"
-msgstr ""
+msgstr "Farbprofil auswählen"
 
 #: modules/cdisplay_proof.c:337
 msgid "_Profile:"
-msgstr ""
+msgstr "_Profil:"
 
 #: modules/cdisplay_proof.c:345
 msgid "_Black Point Compensation"
-msgstr ""
+msgstr "Schwarzpunkt-Abgleich"
 
 #: modules/colorsel_cmyk.c:73
 msgid "CMYK color selector"
@@ -646,7 +645,7 @@ msgstr "Schwarz (Key)"
 
 #: modules/colorsel_cmyk.c:193
 msgid "Black Pullout (%):"
-msgstr ""
+msgstr "Schwarz-Auszug (%):"
 
 #: modules/colorsel_triangle.c:110
 msgid "Painter-style triangle color selector"
