2004-03-05  Sven Neumann  <sven@gimp.org>
	* app/tools/gimplevelstool.c: compute the slider positions in the
	expose event handler so that the sliders get positioned correctly
	when the dialog is resized.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12534 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2004-03-05  Sven Neumann  <sven@gimp.org>
 
+	* app/tools/gimplevelstool.c: compute the slider positions in the
+	expose event handler so that the sliders get positioned correctly
+	when the dialog is resized.
+
+2004-03-05  Sven Neumann  <sven@gimp.org>
+
 	* libgimpwidgets/gimpwidgets.c (gimp_random_seed_new): resurrected
 	a mnemonic that was lost lately (1.88 -> 1.89) but still exists in
 	most translations.
