--- a/tips/es.po
+++ b/tips/es.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gimp-tips.HEAD\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-03-05 00:12+0100\n"
-"PO-Revision-Date: 2004-02-09 13:34+0100\n"
+"POT-Creation-Date: 2004-03-05 15:55+0100\n"
+"PO-Revision-Date: 2004-03-05 16:00+0100\n"
 "Last-Translator: Pablo G. del Campo <pablodc@bigfoot.com>\n"
 "Language-Team: Spanish <traductores@es.gnome.org>\n"
 "MIME-Version: 1.0\n"
@@ -47,13 +47,10 @@ msgstr ""
 "que ésta utilice el color de fondo en lugar del color de frente."
 
 #: tips/gimp-tips.xml.in.h:5
-#, fuzzy
 msgid ""
 "<tt>Ctrl</tt>-drag with the Rotate tool will constrain the rotation to 15 "
 "degree angles."
-msgstr ""
-"Al presionar <tt>Ctrl</tt> y arrastrar con la herramienta de rotación "
-"limitará la rotación a ángulos de 15 grados."
+msgstr "Al pulsar <tt>Ctrl</tt> y arrastrar con la herramienta de rotación limitará la rotación a ángulos de 15 grados."
 
 #: tips/gimp-tips.xml.in.h:6
 msgid ""
@@ -77,18 +74,12 @@ msgstr ""
 "«Capas» o utilice los menús para hacer lo mismo."
 
 #: tips/gimp-tips.xml.in.h:8
-#, fuzzy
 msgid ""
 "After you enabled \"Dynamic Keyboard Shortcuts\" in the Preferences dialog, "
 "you can reassign shortcut keys. Do so by bringing up the menu, selecting a "
 "menu item, and pressing the desired key combination. If \"Save Keyboard "
 "Shortcuts\" is enabled, the key bindings are saved when you exit GIMP."
-msgstr ""
-"Después de activar las «Combinaciones de teclas dinámicas» en el diálogo de "
-"preferencias puede reasignar combinaciones de teclas. Haga esto abriendo el "
-"menú, seleccionando un elemento del menú y presionando la combinación de "
-"teclas deseada. Si está activado «Guardar las combinaciones de teclas» las "
-"combinaciones serán guardadas cuando salga de El GIMP."
+msgstr "Después de activar las «Combinaciones de teclas dinámicas» en el diálogo de preferencias puede reasignar combinaciones de teclas. Haga esto abriendo el menú, seleccionando un elemento del menú y pulsando la combinación de teclas deseada. Si está activado «Guardar las combinaciones de teclas» las combinaciones serán guardadas cuando salga de El GIMP."
 
 #: tips/gimp-tips.xml.in.h:9
 msgid ""
@@ -114,7 +105,6 @@ msgstr ""
 "Curvas)."
 
 #: tips/gimp-tips.xml.in.h:11
-#, fuzzy
 msgid ""
 "If you stroke a path (Edit-&gt;Stroke Path), the paint tools can be used "
 "with their current settings. You can use the Paintbrush in gradient mode or "
@@ -135,7 +125,6 @@ msgstr ""
 "herramientas y otros diálogos."
 
 #: tips/gimp-tips.xml.in.h:13
-#, fuzzy
 msgid ""
 "Most plug-ins work on the current layer of the current image. In some cases, "
 "you will have to merge all layers (Image-&gt;Flatten Image) if you want the "
@@ -156,7 +145,6 @@ msgstr ""
 "errores..."
 
 #: tips/gimp-tips.xml.in.h:15
-#, fuzzy
 msgid ""
 "Not all effects can be applied to all kinds of images. This is indicated by "
 "a grayed-out menu-entry. You may need to change the image mode to RGB (Image-"
@@ -283,7 +271,6 @@ msgstr ""
 "arrastrando de izquierda a derecha."
 
 #: tips/gimp-tips.xml.in.h:26
-#, fuzzy
 msgid ""
 "You can create and edit complex selections using the Path tool. The Paths "
 "dialog allows you to work on multiple paths and to convert them to "
@@ -312,25 +299,17 @@ msgstr ""
 "sobre una imagen rellenará la imagen actual o la selección con ese color."
 
 #: tips/gimp-tips.xml.in.h:29
-#, fuzzy
 msgid ""
 "You can draw simple squares or circles using Edit-&gt;Stroke Selection. It "
 "strokes the edge of your current selection. More complex shapes can be drawn "
 "using the Path tool or with Filters-&gt;Render-&gt;Gfig."
-msgstr ""
-"Puede dibujar círculos o rectángulos simples utilizando Editar-&gt;Seleccion "
-"de trazo. Esto traza el borde de su selección actual. Se pueden dibujar "
-"formas mas complejas utilizando la herramienta Ruta o con Filtros-&gt;"
-"Renderizar-&gt;Gfig."
+msgstr "Puede dibujar círculos o rectángulos simples utilizando Editar-&gt;Selección de trazo. Esto traza el borde de su selección actual. Se pueden dibujar formas más complejas utilizando la herramienta Ruta o con Filtros-&gt;Renderizar-&gt;Gfig."
 
 #: tips/gimp-tips.xml.in.h:30
 msgid ""
 "You can get context-sensitive help for most of the GIMP's features by "
 "pressing the F1 key at any time. This also works inside the menus."
-msgstr ""
-"Puede obtener ayuda sensible al contexto para la mayoría de las "
-"características de El GIMP presionando la tecla F1 en cualquier momento. "
-"Esto también funciona dentro de los menús."
+msgstr "Puede obtener ayuda sensible al contexto para la mayoría de las características de El GIMP pulsando la tecla F1 en cualquier momento. Esto también funciona dentro de los menús."
 
 #: tips/gimp-tips.xml.in.h:31
 msgid ""
