2004-03-05  Sven Neumann  <sven@gimp.org>
	* plug-ins/libgimpoldpreview/gimpoldpreview.c: include
	stdplugins-intl.h so that "Preview" ends up in the plug-in
	translation domain (bug #136303).


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12536 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po-plug-ins/ChangeLog
+++ b/po-plug-ins/ChangeLog
@@ -1,3 +1,9 @@
+2004-03-05  Sven Neumann  <sven@gimp.org>
+
+	* POTFILES.in: added missing file (bug #136303).
+
+	* de.po: minor updates.
+
 2004-02-28  Christophe Merlet  <redfox@redfoxcenter.org>
 
 	* fr.po: Updated French translation from
