--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2004-03-05  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/libgimpoldpreview/gimpoldpreview.c: include
+	stdplugins-intl.h so that "Preview" ends up in the plug-in
+	translation domain (bug #136303).
+
+2004-03-05  Sven Neumann  <sven@gimp.org>
+
 	* app/tools/gimplevelstool.c: compute the slider positions in the
 	expose event handler so that the sliders get positioned correctly
 	when the dialog is resized.
