--- a/tips/ChangeLog
+++ b/tips/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-05  Miloslav Trmac  <mitr@volny.cz>
+
+	* cs.po: "Updated" Czech translation.
+
 2004-03-05  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
 
 	* es.po: Updated Spanish translation.
