--- a/po-libgimp/fr.po
+++ b/po-libgimp/fr.po
@@ -5,16 +5,16 @@
 # Vincent Renardias <vincent@ldsol.com>, 1998-1999.
 # David Monniaux <monniaux@ens.fr>, 1999.
 # Joaquim Fellmann <joaquim@hrnet.fr>, 2000.
-# maintainer: Christophe Merlet (RedFox) <redfox@redfoxcenter.org>, 2000-2003.
+# maintainer: Christophe Merlet (RedFox) <redfox@redfoxcenter.org>, 2000-2004.
 # Raymond Ostertag <r.ostertag@caramail.com>, 2003-2004.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: gimp-libgimp 2.0pre4\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-03-04 00:14+0100\n"
-"PO-Revision-Date: 2004-02-28 15:42+0100\n"
-"Last-Translator: Raymond Ostertag <r.ostertag@caramail.com>\n"
+"POT-Creation-Date: 2004-03-06 15:01+0100\n"
+"PO-Revision-Date: 2004-03-06 14:55+0100\n"
+"Last-Translator: Christophe Merlet (RedFox) <redfox@redfoxcenter.org>\n"
 "Language-Team: GNOME French Team <gnomefr@traduc.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -26,7 +26,7 @@ msgstr "Sélection des brosses"
 
 #: libgimp/gimpbrushmenu.c:161 libgimp/gimppatternmenu.c:144
 msgid "_Browse..."
-msgstr "_Naviguer..."
+msgstr "_Parcourir..."
 
 #: libgimp/gimpexport.c:215 libgimp/gimpexport.c:251
 #, c-format
@@ -158,7 +158,6 @@ msgstr "_Ignorer"
 msgid "_Export"
 msgstr "_Exporter"
 
-#. the headline
 #: libgimp/gimpexport.c:485
 #, c-format
 msgid ""
@@ -189,15 +188,15 @@ msgid ""
 msgstr ""
 "Vous êtes sur le point d'enregistrer un canal (sélection enregistrée) comme %"
 "s.\n"
-"Cela ne sauvegardera pas les calques visibles."
+"Cela n'enregistrera pas les calques visibles."
 
 #: libgimp/gimpfontmenu.c:89
 msgid "Font Selection"
-msgstr "Sélection des polices"
+msgstr "Sélecteur de polices"
 
 #: libgimp/gimpgradientmenu.c:103
 msgid "Gradient Selection"
-msgstr "Sélection des dégradés"
+msgstr "Sélecteur de dégradés"
 
 #: libgimp/gimpmenu.c:407
 msgid "None"
@@ -398,7 +397,7 @@ msgstr "Ancien :"
 
 #: libgimpwidgets/gimpfileentry.c:350
 msgid "Select Folder"
-msgstr "Sélectionnez un répertoire"
+msgstr "Sélectionnez un dossier"
 
 #: libgimpwidgets/gimpfileentry.c:364
 msgid "Select File"
@@ -421,8 +420,8 @@ msgid ""
 "Click the eyedropper, then click a color anywhere on your screen to select "
 "that color."
 msgstr ""
-"Cliquez sur la pipette, ensuite cliquez sur une couleur n'importe où dans "
-"votre écranpour sélectionner cette couleur."
+"Cliquez sur la pipette, puis cliquez sur une couleur n'importe où sur votre "
+"écran pour sélectionner cette couleur."
 
 #: libgimpwidgets/gimpstock.c:113
 msgid "Anchor"
@@ -442,7 +441,7 @@ msgstr "Lié"
 
 #: libgimpwidgets/gimpstock.c:117
 msgid "Paste as New"
-msgstr "Coller comme nouveau"
+msgstr "Coller en tant que nouveau"
 
 #: libgimpwidgets/gimpstock.c:118
 msgid "Paste Into"
@@ -450,7 +449,7 @@ msgstr "Coller dans"
 
 #: libgimpwidgets/gimpstock.c:119
 msgid "_Reset"
-msgstr "_Initialiser"
+msgstr "_Réinitialiser"
 
 #: libgimpwidgets/gimpstock.c:120
 msgid "Visible"
@@ -521,8 +520,8 @@ msgid "Seed random number generator with a generated random number"
 msgstr "Initialise le générateur de nombre aléatoire avec un nombre aléatoire"
 
 #: libgimpwidgets/gimpwidgets.c:1292
-msgid "Randomize"
-msgstr "Aléatoire"
+msgid "_Randomize"
+msgstr "_Aléatoire"
 
 #: modules/cdisplay_colorblind.c:124
 msgid "Color deficit simulation filter (Brettel-Vienot-Mollon algorithm)"
