--- a/po-plug-ins/ChangeLog
+++ b/po-plug-ins/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-06  Christophe Merlet  <redfox@redfoxcenter.org>
+
+	* fr.po: Updated French translation.
+
 2004-03-05  Sven Neumann  <sven@gimp.org>
 
 	* POTFILES.in: added missing file (bug #136303).
