2004-03-06  Sven Neumann  <sven@gimp.org>
	* libgimpwidgets/gimpquerybox.c (query_box_disconnect): disconnect
	the response handler to avoid that the query_box callback is being
	called multiple times. Fixes bug #136371.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12540 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-03-06  Sven Neumann  <sven@gimp.org>
+
+	* libgimpwidgets/gimpquerybox.c (query_box_disconnect): disconnect
+	the response handler to avoid that the query_box callback is being
+	called multiple times. Fixes bug #136371.
+
 2004-03-05  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/common/plasma.c (add_random): check random range before
