2004-03-07  Sven Neumann  <sven@gimp.org>
	* libgimp/gimpfontmenu.c (gimp_font_select_widget_new): use
	GIMP_STOCK_FONT instead of GTK_STOCK_SELECT_FONT.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12546 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-03-07  Sven Neumann  <sven@gimp.org>
 
+	* libgimp/gimpfontmenu.c (gimp_font_select_widget_new): use
+	GIMP_STOCK_FONT instead of GTK_STOCK_SELECT_FONT.
+
+2004-03-07  Sven Neumann  <sven@gimp.org>
+
 	Made size of undo previews configurable. Not dynamic for now, but
 	at least not hardcoded any longer. Fixes bug #119905:
 	
