2004-03-07  Sven Neumann  <sven@gimp.org>
	* gimp.spec.in: removed references to static libraries. These
	are not any longer built by default.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12548 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-03-07  Sven Neumann  <sven@gimp.org>
 
+	* gimp.spec.in: removed references to static libraries. These
+	are not any longer built by default.
+
+2004-03-07  Sven Neumann  <sven@gimp.org>
+
 	* libgimp/gimpfontmenu.c (gimp_font_select_widget_new): use
 	GIMP_STOCK_FONT instead of GTK_STOCK_SELECT_FONT.
 
