--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2004-03-07  Sven Neumann  <sven@gimp.org>
+
+	* tools/pdbgen/pdb/edit.pdb (gimp-edit-copy, gimp-edit-cut)
+	removed some comments that dated back to the time when these
+	functions used to take image and drawable parameters.
+
+	* app/pdb/edit_cmds.c
+	* libgimp/gimpedit_pdb.c: regenerated.
+
 2004-03-07  Michael Natterer  <mitch@gimp.org>
 
 	* app/core/gimp-edit.c (gimp_edit_extract): fixed bug added when
