--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-08  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/common/mng.c (run): added missing call to INIT_I18N()
+	(spotted by iiccii@hotmail.com).
+
 2004-03-07  Sven Neumann  <sven@gimp.org>
 
 	* tools/pdbgen/pdb/edit.pdb (gimp-edit-copy, gimp-edit-cut)
