2004-03-08  Manish Singh  <yosh@gimp.org>
        * plug-ins/pygimp/plug-ins/shadow_bevel.py: don't pass extra
        parameters to undo group functions. Fixes #136524.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12553 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-08  Manish Singh  <yosh@gimp.org>
+
+	* plug-ins/pygimp/plug-ins/shadow_bevel.py: don't pass extra
+	parameters to undo group functions. Fixes #136524.
+
 2004-03-08  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/common/mng.c (run): added missing call to INIT_I18N()
