--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-08  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/common/svg.c (run): added missing call to INIT_I18N()
+	(spotted by Yuheng Xie, bug #136535).
+
 2004-03-08  Manish Singh  <yosh@gimp.org>
 
 	* plug-ins/pygimp/plug-ins/shadow_bevel.py: don't pass extra
