2004-03-08  Dave Neary  <bolsh@gimp.org>
        * app/display/gimpdisplayshell.c: First attempt to resolve bug
        #107009. This changes the wording on the buttons to "Discard
        changes" and "Cancel" when closing an insaved image. However I
        think the absence of icons is a but ugly. I would like to add
        respectively the icons from GTK_STOCK_DELETE and GTK_STOCK_CANCEL
        to these two buttons.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12556 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2004-03-08  Dave Neary  <bolsh@gimp.org>
+
+	* app/display/gimpdisplayshell.c: First attempt to resolve bug 
+	#107009. This changes the wording on the buttons to "Discard 
+	changes" and "Cancel" when closing an insaved image. However I 
+	think the absence of icons is a but ugly. I would like to add 
+	respectively the icons from GTK_STOCK_DELETE and GTK_STOCK_CANCEL 
+	to these two buttons.
+
 2004-03-08  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/common/svg.c (run): added missing call to INIT_I18N()
